# graphics

./: .gitignore  CMakeLists.txt  image.ppm  out.ppm
include/math/: CMakeLists.txt  onb.hpp  rgb.hpp  unit3.cpp  unit3.hpp  vec3.cpp  vec3.hpp
src/: CMakeLists.txt  main.cpp  rgb.hpp  vec3.hpp
src/image/: CMakeLists.txt  image.cpp  image.hpp  rgb.cpp  rgb.hpp  sample.cpp  sample.hpp  scene.cpp  scene.hpp
src/math/: CMakeLists.txt  hit.hpp  onb.cpp  onb.hpp  ray.cpp  ray.hpp  rgb.cpp  rgb.hpp  unit3.cpp  unit3.hpp  vec2.hpp  vec3.cpp  vec3.hpp
src/shapes/: CMakeLists.txt  sphere.hpp  triangle.hpp
src_cpp/: CMakeLists.txt  main.cpp  smallpt.cpp
src_cpp/image/: image.cpp  image.hpp  rgb.hpp  sample.cpp  scene.cpp  scene.hpp
src_cpp/math/: hit.hpp  onb.hpp  unit3.cpp  unit3.hpp  vec2.hpp  vec3.hpp
src_cpp/shapes/: triangle.hpp
src_cuda/: CMakeLists.txt  compile.bat  image.cuh  main.cu  makefile
src_cuda/math/: CMakeLists.txt  ray.cuh  rgb.cuh  vec3.cuh
src_cuda/render/: CMakeLists.txt  scene.cuh  sphere.cuh  triangle.cuh
tests/: OnbTests.cpp  Vec3Tests.cpp
